refactored activity counts & detailed stats components

--- a/client/src/app/components/organizations/organization-leaderboards/organization-leaderboards.component.html
+++ b/client/src/app/components/organizations/organization-leaderboards/organization-leaderboards.component.html
@@ -106,7 +106,7 @@
 
 <ng-template #cardTitle>
   <span nz-typography>
-    <strong>Organization Curation Leaderboards</strong>
+    <strong>Organization Curation Activity Leaderboards</strong>
   </span>
 </ng-template>
 
