--- a/client/src/app/components/users/user-leaderboards/user-leaderboards.component.html
+++ b/client/src/app/components/users/user-leaderboards/user-leaderboards.component.html
@@ -105,7 +105,7 @@
 
 <ng-template #cardTitle>
   <span nz-typography>
-    <strong>Contributor Curation Leaderboards</strong>
+    <strong>Contributor Curation Activity Leaderboards</strong>
   </span>
 </ng-template>
 
