integrated curation activity rankings into user detail stats block

--- a/client/src/app/components/organizations/organization-card/organization-card.component.html
+++ b/client/src/app/components/organizations/organization-card/organization-card.component.html
@@ -69,7 +69,7 @@
         nzTitle="Curation Stats"
         [nzExtra]="subGroupToggle">
         <cvc-stats-card
-          [stats]="
+          [cvcStats]="
             includeSubStats
               ? organization.orgAndSuborgsStatsHash
               : organization.orgStatsHash
