--- a/client/src/app/forms2/components/entity-select/entity-select.component.html
+++ b/client/src/app/forms2/components/entity-select/entity-select.component.html
@@ -1,48 +1,52 @@
-<nz-select
-  nzShowSearch
-  nzServerSearch
-  nzAllowClear
-  [class.ng-dirty]="cvcShowError"
-  [nzDropdownMatchSelectWidth]="true"
-  [formControl]="cvcFormControl"
-  [formlyAttributes]="cvcFormlyAttributes"
-  [nzMode]="cvcSelectMode"
-  [nzPlaceHolder]="cvcPlaceholder || 'Search ' + cvcEntityName.plural"
-  [nzCustomTemplate]="cvcCustomTemplate || null"
-  [nzOptionHeightPx]="30"
-  [nzDisabled]="cvcDisabled"
-  [nzLoading]="cvcLoading"
-  [nzAllowClear]="cvcAllowClear"
-  [nzBorderless]="cvcBorderless"
-  [nzSuffixIcon]="cvcSuffixIcon"
-  [nzShowArrow]="cvcShowArrow"
-  [nzAutoClearSearchValue]="cvcAutoClearSearchValue"
-  [nzOptions]="cvcOptions || []"
-  [nzDropdownRender]="cvcDropdownExtra || null"
-  [nzNotFoundContent]="searchMessages"
-  [nzOpen]="cvcSelectOpen"
-  (nzOpenChange)="onOpenChange$.next($event)"
-  (nzOnSearch)="cvcOnSearch.next($event)"
-  (ngModelChange)="cvcOnModelChange.next($event)">
-</nz-select>
+<ng-container *ngrxLet="notFoundDisplay$ as notFoundDisplay">
+  <nz-select
+    nzShowSearch
+    nzServerSearch
+    nzAllowClear
+    [class.ng-dirty]="cvcShowError"
+    [nzDropdownMatchSelectWidth]="true"
+    [formControl]="cvcFormControl"
+    [formlyAttributes]="cvcFormlyAttributes"
+    [nzMode]="cvcSelectMode"
+    [nzPlaceHolder]="cvcPlaceholder || 'Search ' + cvcEntityName.plural"
+    [nzCustomTemplate]="cvcCustomTemplate || null"
+    [nzOptionHeightPx]="30"
+    [nzDisabled]="cvcDisabled"
+    [nzLoading]="cvcLoading"
+    [nzAllowClear]="cvcAllowClear"
+    [nzBorderless]="cvcBorderless"
+    [nzSuffixIcon]="cvcSuffixIcon"
+    [nzShowArrow]="cvcShowArrow"
+    [nzAutoClearSearchValue]="cvcAutoClearSearchValue"
+    [nzOptions]="cvcOptions || []"
+    [nzDropdownRender]="addForm"
+    [nzNotFoundContent]="searchMessages"
+    [nzOpen]="cvcSelectOpen"
+    (nzOpenChange)="onOpenChange$.next($event)"
+    (nzOnSearch)="cvcOnSearch.next($event)"
+    (ngModelChange)="cvcOnModelChange.next($event)">
+  </nz-select>
 
-<ng-template #searchMessages>
-  <span
-    *ngIf="notFoundDisplay.showSpinner"
-    nz-icon
-    [nzType]="'loading'"></span>
+  <ng-template #searchMessages>
+    <span
+      *ngIf="notFoundDisplay.showSpinner"
+      nz-icon
+      [nzType]="'loading'"></span>
 
-  <ng-container *ngIf="!notFoundDisplay.showAddForm">
-    {{ notFoundDisplay.message }}
-  </ng-container>
+    <ng-container *ngIf="!notFoundDisplay.showAddForm">
+      {{ notFoundDisplay.message }}
+    </ng-container>
 
-  <ng-container
-    *ngIf="notFoundDisplay.showAddForm"
-    [ngTemplateOutlet]="this.cvcAddEntity"
-    [ngTemplateOutletContext]="{
-      $implicit: notFoundDisplay.searchStr,
-      createMsg: notFoundDisplay.message,
-      model: cvcAddEntityModel
-    }">
-  </ng-container>
-</ng-template>
+  </ng-template>
+  <ng-template #addForm>
+    <ng-container
+      *ngIf="notFoundDisplay.showAddForm"
+      [ngTemplateOutlet]="this.cvcAddEntity"
+      [ngTemplateOutletContext]="{
+        $implicit: notFoundDisplay.searchStr,
+        createMsg: notFoundDisplay.message,
+        model: cvcAddEntityModel
+      }">
+    </ng-container>
+  </ng-template>
+</ng-container>
