--- a/client/src/app/forms2/types/variant-select/variant-select.type.html
+++ b/client/src/app/forms2/types/variant-select/variant-select.type.html
@@ -7,6 +7,7 @@
       <cvc-entity-select
         [cvcAddEntity]="addVariant"
         [cvcAddEntityModel]="onModel$ | ngrxPush"
+        [cvcAddEntityBehavior]="showAddBehavior"
         [cvcSelectMode]="props.isMultiSelect ? 'multiple' : 'default'"
         [cvcCustomTemplate]="selectedTemplate"
         [cvcFormControl]="formControl"
@@ -107,10 +108,10 @@
   #addVariant
   let-searchStr
   let-model="model">
-  <cvc-variant-quick-add-form
-    [cvcSearchString]="searchStr"
-    [cvcGeneId]="onGeneId$ | ngrxPush"
-    [cvcGeneName]="onGeneName$ | ngrxPush"
-    (cvcOnCreate)="onPopulate$.next($event)">
-  </cvc-variant-quick-add-form>
+    <cvc-variant-quick-add-form
+      [cvcSearchString]="searchStr"
+      [cvcGeneId]="onGeneId$ | ngrxPush"
+      [cvcGeneName]="onGeneName$ | ngrxPush"
+      (cvcOnCreate)="onPopulate$.next($event)">
+    </cvc-variant-quick-add-form>
 </ng-template>
