--- a/client/src/app/views/organizations/organizations-members/organizations-members.component.html
+++ b/client/src/app/views/organizations/organizations-members/organizations-members.component.html
@@ -1,3 +1,29 @@
+<nz-row [nzGutter]="[8, 8]">
+  <ng-container *ngFor="let member of members$ | ngrxPush">
+    <nz-col
+      *ngIf="member"
+      [nzXs]="24"
+      [nzSm]="24"
+      [nzMd]="12"
+      [nzLg]="8"
+      [nzXl]="6"
+      [nzXXl]="4">
+      <cvc-user-card [user]="member"></cvc-user-card>
+    </nz-col>
+  </ng-container>
+  <nz-col
+    nzSpan="24"
+    *ngrxLet="pageInfo$ as pageInfo">
+    <button
+      *ngIf="pageInfo && pageInfo.hasNextPage && pageInfo.endCursor"
+      (click)="loadMore(pageInfo.endCursor)"
+      nz-button
+      nzBlock>
+      Load {{ this.initialPageSize }} More
+    </button>
+  </nz-col>
+</nz-row>
+<!--
 <nz-spin [nzSpinning]="this.loading$ | ngrxPush">
   <ng-container *ngIf="!(this.loading$ | ngrxPush)">
     <nz-space
@@ -17,7 +43,6 @@
             [user]="member"></cvc-user-card>
         </div>
       </div>
-      <!-- Load More button row -->
       <ng-container *nzSpaceItem>
         <ng-container *ngrxLet="pageInfo$ as pageInfo">
           <ng-container
@@ -34,3 +59,4 @@
     </nz-space>
   </ng-container>
 </nz-spin>
+-->
