added personal links to user-detail view

--- a/client/src/app/views/users/users-detail/users-detail.component.less
+++ b/client/src/app/views/users/users-detail/users-detail.component.less
@@ -25,6 +25,16 @@
   }
 }
 
+.user-socials {
+  text-align: center;
+  a {
+    margin-right: 4px;
+  }
+  a:last-of-type {
+    margin-right: 0;
+  }
+}
+
 .editor-coi-card {
   ::ng-deep .ant-card-body {
     padding: 0;
