--- a/client/src/app/views/users/users-detail/users-detail.component.html
+++ b/client/src/app/views/users/users-detail/users-detail.component.html
@@ -44,6 +44,86 @@
                 <nz-descriptions-item nzTitle="Role">
                   {{ user.role | enumToTitle }}
                 </nz-descriptions-item>
+                <nz-descriptions-item nzTitle="Personal Links">
+                  <div class="user-socials">
+                    <ng-container *ngIf="user.url">
+                      <a
+                        href="https://{{ user.url }}"
+                        target="_blank"
+                        nz-tooltip
+                        nzTooltipTitle="Personal Website">
+                        <i
+                          nz-icon
+                          nzType="link"
+                          nzTheme="outline"></i>
+                      </a>
+                    </ng-container>
+                    <ng-container *ngIf="user.twitterHandle">
+                      <a
+                        href="http://twitter.com/{{ user.twitterHandle }}"
+                        target="_blank"
+                        nz-tooltip
+                        nzTooltipTitle="Twitter Profile">
+                        <i
+                          nz-icon
+                          nzType="twitter"
+                          nzTheme="outline"></i>
+                      </a>
+                    </ng-container>
+
+                    <ng-container *ngIf="user.facebookProfile">
+                      <a
+                        href="http://facebook.com/{{ user.facebookProfile }}"
+                        target="_blank"
+                        nz-tooltip
+                        nzTooltipTitle="Facebook Profile">
+                        <i
+                          nz-icon
+                          nzType="facebook"
+                          nzTheme="outline"></i>
+                      </a>
+                    </ng-container>
+
+                    <ng-container *ngIf="user.linkedinProfile">
+                      <a
+                        href="http://linkedin.com/in/{{ user.linkedinProfile }}"
+                        target="_blank"
+                        nz-tooltip
+                        nzTooltipTitle="LinkedIn Profile">
+                        <i
+                          nz-icon
+                          nzType="linkedin"
+                          nzTheme="outline"></i>
+                      </a>
+                    </ng-container>
+                    <ng-container *ngIf="user.orcid">
+                      <a
+                        href="https://orcid.org/{{ user.orcid }}"
+                        target="_blank"
+                        nz-tooltip
+                        nzTooltipTitle="ORCiD Record">
+                        <i nz-icon>
+                          <svg
+                            version="1.1"
+                            id="Layer_2"
+                            xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink"
+                            x="0px"
+                            y="0px"
+                            viewBox="0 0 896 896"
+                            style="enable-background: new 0 0 896 896"
+                            xml:space="preserve">
+                            <path
+                              d="M647.4,462.7c0,41.3-25,124.2-134.3,124.2h-76.7V338.5h74.2C604.5,338.5,647.4,395.4,647.4,462.7z M848.6,448
+                            	c0,221.3-179.3,400.6-400.6,400.6S47.4,669.3,47.4,448S226.7,47.4,448,47.4S848.6,226.7,848.6,448z M317.5,295h-48.2v335.2h48.2
+                            	V446.4V295z M325,225.2c0-17.2-14.1-31.6-31.6-31.6s-31.6,14.1-31.6,31.6c0,17.2,14.1,31.6,31.6,31.6S325,242.4,325,225.2z
+                            	 M696.8,462.7c0-79.2-54.5-167.7-178.4-167.7H388.2v335.5H519C629.5,630.5,696.8,548.8,696.8,462.7z" />
+                          </svg>
+                        </i>
+                      </a>
+                    </ng-container>
+                  </div>
+                </nz-descriptions-item>
               </nz-descriptions>
             </div>
             <ng-container *ngIf="this.ownProfile$ | ngrxPush">
