--- a/client/src/app/forms2/components/entity-select/entity-select.component.html
+++ b/client/src/app/forms2/components/entity-select/entity-select.component.html
@@ -33,10 +33,9 @@
       nz-icon
       [nzType]="'loading'"></span>
 
-    <ng-container *ngIf="!notFoundDisplay.showAddForm">
+    <ng-container>
       {{ notFoundDisplay.message }}
     </ng-container>
-
   </ng-template>
   <ng-template #addForm>
     <ng-container
